# earthdaily-python-client

./: .buildinfo  .env.sample  .gitignore  .pre-commit-config.yaml  AUTHENTICATION.html  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  api.html  earthdaily.accessor.html  earthdaily.accessor.whittaker.html  earthdaily.core.html  earthdaily.datasets.data.html  earthdaily.datasets.html  earthdaily.earthdatastore.cube_utils.asset_mapper.html  earthdaily.earthdatastore.cube_utils.custom_operations.html  earthdaily.earthdatastore.cube_utils.custom_reducers.html  earthdaily.earthdatastore.cube_utils.geometry_manager.html  earthdaily.earthdatastore.cube_utils.harmonizer.html  earthdaily.earthdatastore.cube_utils.html  earthdaily.earthdatastore.cube_utils.preprocessing.html  earthdaily.earthdatastore.html  earthdaily.earthdatastore.mask.html  earthdaily.earthdatastore.parallel_search.html  earthdaily.html  earthdaily.utils.copy_credentials_template.html  earthdaily.utils.html  genindex.html  index.html  modules.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  quickstart.ipynb  requirements.yml  (+15 more)
1.0.0/: .buildinfo  .buildinfo.bak  api.html  genindex.html  index.html  migration-v0-to-v1.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
_auto_examples/: common_band_names.html  compare_scale_s2.html  earthdaily_simulated_dataset.html  field_evolution.html  first_steps_create_datacube.html  index.html  multisensors_cube.html  sg_execution_times.html  summary_stack.html  venus_cube_mask.html
_autosummary/: earthdaily.EarthDataStore.html  earthdaily.accessor.html  earthdaily.accessor.whittaker.html  earthdaily.accessor.whittaker.whittaker.html  earthdaily.accessor.xr_loop_func.html  earthdaily.core.html  earthdaily.datasets.data.html  earthdaily.datasets.html  earthdaily.datasets.load_pivot.html  earthdaily.datasets.load_pivot_corumba.html  earthdaily.earthdatastore.Auth.html  earthdaily.earthdatastore.EarthDataStoreConfig.html  earthdaily.earthdatastore.StacCollectionExplorer.html  earthdaily.earthdatastore.apply_single_condition.html  earthdaily.earthdatastore.cube_utils.asset_mapper.AssetMapper.html  earthdaily.earthdatastore.cube_utils.asset_mapper.html  earthdaily.earthdatastore.cube_utils.datacube.html  earthdaily.earthdatastore.cube_utils.geometry_manager.GeometryManager.html  earthdaily.earthdatastore.cube_utils.geometry_manager.html  earthdaily.earthdatastore.cube_utils.harmonizer.Harmonizer.html  earthdaily.earthdatastore.cube_utils.harmonizer.html  earthdaily.earthdatastore.cube_utils.html  earthdaily.earthdatastore.cube_utils.metacube.html  earthdaily.earthdatastore.cube_utils.preprocessing.html  earthdaily.earthdatastore.cube_utils.preprocessing.rasterize.html  earthdaily.earthdatastore.cube_utils.rescale_assets_with_items.html  earthdaily.earthdatastore.enhance_assets.html  earthdaily.earthdatastore.filter_items.html  earthdaily.earthdatastore.html  earthdaily.earthdatastore.mask.Mask.html  earthdaily.earthdatastore.mask.QA_PIXEL_cloud_detection.html  earthdaily.earthdatastore.mask.filter_clear_cover.html  earthdaily.earthdatastore.mask.html  earthdaily.earthdatastore.parallel_search.html  earthdaily.earthdatastore.post_query_items.html  earthdaily.earthdatastore.validate_property_condition.html  earthdaily.html  earthdaily.utils.copy_credentials_template.html  earthdaily.utils.copy_credentials_template.write_env.html  earthdaily.utils.copy_credentials_template.write_json.html  (+2 more)
_modules/: earthdaily.html  index.html
_sources/: CONTRIBUTING.md.txt  earthdaily.accessor.rst.txt  earthdaily.accessor.whittaker.rst.txt  earthdaily.core.rst.txt  earthdaily.datasets.data.rst.txt  earthdaily.datasets.rst.txt  earthdaily.earthdatastore.cube_utils.asset_mapper.rst.txt  earthdaily.earthdatastore.cube_utils.custom_operations.rst.txt  earthdaily.earthdatastore.cube_utils.custom_reducers.rst.txt  earthdaily.earthdatastore.cube_utils.geometry_manager.rst.txt  earthdaily.earthdatastore.cube_utils.harmonizer.rst.txt  earthdaily.earthdatastore.cube_utils.preprocessing.rst.txt  earthdaily.earthdatastore.cube_utils.rst.txt  earthdaily.earthdatastore.mask.rst.txt  earthdaily.earthdatastore.parallel_search.rst.txt  earthdaily.earthdatastore.rst.txt  earthdaily.rst.txt  earthdaily.utils.copy_credentials_template.rst.txt  earthdaily.utils.rst.txt  modules.rst.txt  sg_execution_times.rst.txt  tests.rst.txt  tests.test_assetmapper.rst.txt  tests.test_auth.rst.txt  tests.test_client.rst.txt  tests.test_eds_auth.rst.txt  tests.test_geometrymanager.rst.txt  tests.test_harmonizer.rst.txt  tests.test_simple_datacube.rst.txt  tests.test_zonalstats.rst.txt
docs/: API.rst.automodapi  AUTHENTICATION.md  CHANGELOG.md  CONTRIBUTING.md  api.rst  conf.py  index.rst  migration-v0-to-v1.md  sg_execution_times.rst
earthdaily/: __init__.py  _api_requester.py  _auth_client.py  _downloader.py  _eds_client.py  _eds_config.py  _eds_logging.py  _eds_models.py  _http_client.py  _uploader.py  _zipper.py  exceptions.py
earthdatastore/: __init__.py  _api_requester.py  _downloader.py  _eds_client.py  _eds_config.py  _uploader.py  exceptions.py
examples/: GALLERY_HEADER.md  README.txt  asset_download_example.py  bulk_search_example.py  common_band_names.py  compare_scale_s2.py  concurrent_search_example.py  county_steel.geojson  datacube_example.py  earthdaily_simulated_dataset.py  enrich_raster_metadata_example.py  field_evolution.py  field_evolution_landsat.py  first_steps_create_datacube.py  legacy_datacube_example.py  mask_scl_stats.py  multisensors_cube.py  odc_or_stackstac.py  ordering_example.py  pivot_evolution.py  proxy_url_download_example.py  quick_start.py  resolver_download_examples.py  s2_datacube_SCL_masked_county_steel.py  sentinel1_helper_example.py  sentinel2_helper_example.py  summary_stack.py  venus_cube.py  venus_cube_mask.py
main/: .buildinfo  .buildinfo.bak  api.html  genindex.html  index.html  migration-v0-to-v1.html  objects.inv  py-modindex.html  search.html  searchindex.js  (+1 more)
v0.5.9/: .buildinfo  (+12 more)
(+1102 files in other folders)
