[project]
name = "earthdaily"
version = "1.0.0b4"
description = "EarthDaily Python Client"
authors = [
    { name = "EarthDaily", email = "info@earthdaily.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "requests>=2.32.3",
    "tqdm>=4.66.5"
]

[project.optional-dependencies]
platform = ["pystac-client>=0.8.6"]
agriculture = [
    "joblib>=1.4.2",
    "numpy>=2.2.2",
    "pystac>=1.12.1",
    "pandas>=2.2.3",
    "pystac-client>=0.8.6",
    "geopandas>=1.0.1",
    "xarray>=2025.1.2",
    "rasterio>=1.4.3",
    "scipy>=1.15.1",
    "stackstac>=0.5.1",
    "odc-stac>=0.3.11",
    "psutil>=6.1.1",
    "toml>=0.10.2",
    "rioxarray>=0.18.2",
    "spyndex>=0.6.0",
    "setuptools>=75.8.0",
    "pyarrow>=19.0.0",
    "dask-image>=2024.5.3",
    "flox (>=0.10.0,<0.11.0)"
]

[tool.poetry.group.tests.dependencies]
ruff = "^0.6.3"
tox = "^4.14.1"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
types-tqdm = "^4.66.0.20240417"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autobuild = "^2024.10.3"
myst-parser = "^4.0.1"
sphinx-autodoc-typehints = "^3.0.1"
sphinx-gallery = "^0.18.0"
sphinx-copybutton = "^0.5.2"
sphinx-automodapi = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["E", "F", "I"]
lint.ignore = []
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=earthdaily --cov-report=term-missing"
testpaths = ["tests"]
