[project]
name = "earthdaily"
version = "1.0.0"
description = "EarthDaily Python Client"
authors = [
    { name = "EarthDaily", email = "info@earthdaily.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "requests>=2.32.3",
    "toml>=0.10.2",
]

[project.optional-dependencies]
platform = [
    "tqdm>=4.66.5",
    "pystac>=1.12.1",
    "pystac-client>=0.8.6",
]
legacy = [
    "tqdm>=4.66.5",
    "joblib>=1.4.2",
    "numpy>=2.2.2",
    "pystac>=1.12.1",
    "pandas>=2.2.3",
    "pystac-client>=0.8.6",
    "geopandas>=1.0.1",
    "xarray>=2025.1.2",
    "rasterio>=1.4.3",
    "scipy>=1.15.1",
    "stackstac>=0.5.1",
    "odc-stac>=0.3.11",
    "psutil>=6.1.1",
    "rioxarray>=0.18.2",
    "spyndex>=0.6.0",
    "setuptools>=75.8.0",
    "pyarrow>=19.0.0",
    "dask<2025.3.0",  # see: https://github.com/earthdaily/earthdaily-python-client/issues/173
    "dask-image>=2024.5.3",
    "flox (>=0.10.0,<0.11.0)",
]

[tool.poetry.group.tests.dependencies]
ruff = "^0.11.0"
tox = "^4.24.2"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
types-tqdm = "^4.67.0.20250319"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autobuild = "^2024.10.3"
myst-parser = "^4.0.1"
sphinx-autodoc-typehints = "^3.0.1"
sphinx-gallery = "^0.18.0"
sphinx-copybutton = "^0.5.2"
sphinx-automodapi = "^0.18.0"
sphinx-multiversion = "^0.2.4"


[tool.poetry.group.dev.dependencies]
pyjwt = "^2.10.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
addopts = "--cov=earthdaily --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "setuptools.*",
    "geopandas.*",
    "pandas.*",
    "xarray.*",
    "scipy.*",
    "shapely.*",
    "rioxarray.*",
    "odc.*",
    "stackstac.*",
    "dask.*",
    "dask_image.*",
    "numba.*",
    "rich.*",
    "xvec.*",
    "spyndex.*",
    "joblib.*",
    "matplotlib.*",
    "toml.*",
    "psutil.*",
    "pytz.*",
    "rasterio.*",
    "pystac.*",
    "numpy.*",
    "click.*"
]
ignore_missing_imports = true