[project]
name = "earthdaily"
version = "1.11.1"
description = "EarthDaily Python Client"
authors = [
    { name = "EarthDaily", email = "info@earthdaily.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.15"

dependencies = [
    "requests>=2.32.4",
    "toml>=0.10.2",
    "urllib3>=2.6.3",  # see https://github.com/advisories/GHSA-gm62-xv2j-4w53
]

[project.optional-dependencies]
platform = [
    "tqdm>=4.66.5",
    "pystac>=1.12.1",
    "pystac-client>=0.8.6",
]
ordering = [
    "pystac>=1.12.1",
]
legacy = [
    "tqdm>=4.66.5",
    "joblib>=1.4.2",
    "numpy>=2.2.2",
    "pystac>=1.12.1",
    "pandas>=2.2.3",
    "pystac-client>=0.8.6",
    "geopandas>=1.1.2",  # see https://github.com/advisories/GHSA-6497-prx7-gpmq
    "xarray>=2025.1.2",
    "rasterio>=1.4.3",
    "scipy>=1.15.1",
    "stackstac>=0.5.1",
    "odc-stac>=0.3.11",
    "psutil>=6.1.1",
    "rioxarray>=0.18.2",
    "spyndex>=0.7.0",
    "pyarrow>=19.0.0",
    "dask<2025.3.0",  # see: https://github.com/earthdaily/earthdaily-python-client/issues/173
    "dask-image>=2024.5.3",
    "flox (>=0.10.0,<0.11.0)",
    "protobuf>=6.33.5",  # see https://github.com/advisories/GHSA-7gcm-g887-7qv7
]
datacube = [
    "numpy>=2.2.2",
    "pystac>=1.12.1",
    "pandas>=2.2.3",
    "geopandas>=1.1.2",  # see https://github.com/advisories/GHSA-6497-prx7-gpmq
    "xarray>=2025.1.2",
    "rasterio>=1.4.3",
    "scipy>=1.15.1",
    "odc-stac>=0.4.0",
    "rioxarray>=0.18.2",
    "spyndex>=0.7.0",
    "dask",
    "matplotlib>=3.0.0",
    "fonttools>=4.60.2",  # see https://github.com/advisories/GHSA-768j-98cg-p3fv
    "pillow>=12.1.1",  # see https://github.com/advisories/GHSA-cfh3-3jmp-rvhc
]
internal = [
    "boto3>=1.35.0",
    "pystac>=1.10.0",
]
utils = [
    "python-dotenv>=1.0.0",
    "ipykernel>=7.0.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.17.0",  # see https://github.com/advisories/GHSA-xm59-rqc7-hhvf
    "tornado>=6.5.5",  # see https://github.com/advisories/GHSA-78cv-mqj4-43f7
]

[dependency-groups]
tests = [
    "ruff>=0.15.5",
    "tox-uv>=1.33.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "ipykernel>=7.2.0",
    "types-tqdm>=4.67.3.20260205",
    "boto3-stubs[events]>=1.42.63",
    "mypy>=1.19.1",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.1",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-gallery>=0.19.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-automodapi>=0.20.0",
    "sphinx-multiversion>=0.2.4",
]
dev = [
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
addopts = "--cov=earthdaily --cov-report=term-missing --ignore=tests/test_notebooks"
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "pandas.*",
    "xarray.*",
    "scipy.*",
    "shapely.*",
    "rioxarray.*",
    "odc.*",
    "stackstac.*",
    "dask.*",
    "dask_image.*",
    "numba.*",
    "rich.*",
    "xvec.*",
    "spyndex.*",
    "joblib.*",
    "matplotlib.*",
    "toml.*",
    "psutil.*",
    "pytz.*",
    "rasterio.*",
    "pystac.*",
    "numpy.*",
    "click.*",
    "nbformat.*",
    "nbclient.*",
    "pyarrow.*",
]
ignore_missing_imports = true
